--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_below="@+id/editUsername"
+        android:inputType="textPassword"
         android:ems="10"
         android:hint="@string/login_password"
         />
