--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="app.modules.appmcdouglas.ui.payment.PaymentFragment"
         android:label="@string/item_payment"
         tools:layout="@layout/fragment_payment" />
+
+    <fragment
+        android:id="@+id/nav_user"
+        android:name="app.modules.appmcdouglas.usermanagement.UserFragment"
+        android:label="@string/item_user"
+        tools:layout="@layout/fragment_user" />
 </navigation>
