--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -27,4 +27,116 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <EditText
+        android:id="@+id/edtEmail"
+        android:layout_below="@+id/txtInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="18dp"
+        android:hint="@string/user_email"
+        android:inputType="text"
+        android:text=""
+        android:textColor="@color/black" />
+
+    <EditText
+        android:id="@+id/edtName"
+        android:layout_below="@+id/edtEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="18dp"
+        android:hint="@string/user_name"
+        android:inputType="text"
+        android:text=""
+        android:textColor="@color/black" />
+
+    <EditText
+        android:id="@+id/edtLastname"
+        android:layout_below="@+id/edtName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="18dp"
+        android:hint="@string/user_lastname"
+        android:inputType="text"
+        android:text=""
+        android:textColor="@color/black" />
+
+
+    <TextView
+        android:id="@+id/txtInfo2"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/edtLastname"
+        android:text="@string/user_info2"
+        android:textSize="18dp"
+        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <View style="@style/Divider"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/txtInfo2"
+        />
+
+    <EditText
+        android:id="@+id/edtPassword"
+        android:layout_below="@+id/txtInfo2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="18dp"
+        android:hint="@string/user_paswword"
+        android:inputType="text"
+        android:layout_marginTop="15dp"
+        android:text=""
+        android:textColor="@color/black" />
+
+    <EditText
+        android:id="@+id/edtChangePassword"
+        android:layout_below="@+id/edtPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="18dp"
+        android:hint="@string/user_change_password"
+        android:inputType="text"
+        android:text=""
+        android:textColor="@color/black" />
+
+    <EditText
+        android:id="@+id/edtConfirmpassword"
+        android:layout_below="@+id/edtChangePassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/user_confirm_password"
+        android:inputType="text"
+        android:layout_marginTop="10dp"
+        android:text=""
+        android:textColor="@color/black" />
+
+    <View style="@style/Divider"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/edtConfirmpassword"
+        />
+
+
+    <TextView
+        android:id="@+id/txtDangerUser"
+        android:layout_below="@+id/edtConfirmpassword"
+        android:textSize="18dp"
+        android:textColor="@color/red"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btnSuccessShopping"
+        android:layout_below="@+id/txtDangerUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/orange"
+        android:text="@string/user_save" />
+
 </RelativeLayout>
