--- a/app/src/main/res/layout/fragment_payment_details.xml
+++ b/app/src/main/res/layout/fragment_payment_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_payment_details"
@@ -8,6 +8,11 @@
     android:background="@color/white"
     android:padding="20dp"
     tools:context=".ui.payment.PaymentDetailsFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/txtTitle"
@@ -153,4 +158,6 @@
         android:backgroundTint="@color/orange"
         android:text="@string/payment_detail_button" />
 
-</RelativeLayout>
+    </LinearLayout>
+
+</ScrollView>
